# jpeg_wrapper

./: .gitignore  CMakeLists.txt  README.md  XJPEG_wrapper.c  XJPEG_wrapper.h  clip.cpp  test.cpp  xtypes.h
libjpeg/: CMakeLists.txt
src/: jcomm.h  jcomm.inl  jdecoder.c  jdecoder.h  jencoder.c  jencoder.h
test/: jclip.cpp  jerase.c  test_gray01.c
